# crud-node-app/app/api/routes/presenter.routes.js
@@ -1,11 +1,16 @@
-const express = require('express');
-const { testApi, getAllPresenters }= require('../controllers/presenterController');
+const express = require("express");
+const {
+    testApi,
+    getAllPresenters,
+    getPresenter
+} = require("../controllers/presenterController");
 
 const router = express.Router();
 
- router.get("/", testApi);
+router.get("/", testApi);
 
- router.get("/presenters", getAllPresenters);
+router.get("/presenters", getAllPresenters);
 
+router.get("/presenters/:id", getPresenter);
 
 module.exports = router;
